Bug 212316 - Mozilla must handle WM_ENDSESSION message to cleanly unload in case of exiting or restarting windows, r=neil, sr=bsmedberg